--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "chroma-js": "^2.1.1",
     "neomorphic-ui": "^0.1.0",
+    "rc-slider": "^9.7.1",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
